--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 #navbar1    {
     color: rgb(187, 187, 187);
     background-color:#ffffff;
-    align-content: center
+    align-content: center;
     Margin: 30px;
 
 }
